--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="user-task">
       <h2>Enter a new task </h2>
       <input type="text" v-model="enteredValue"/>
-      <button @click="addElements">Add Goal</button>
-      <button @click="remove(index)">Clear </button>
-      <button @click="removeAll(index)">Clear All</button>
+      <button @click="addElements">Add Task</button>
+      <button @click="remove(index)">Delete  </button>
+      <button @click="removeAll(index)">Delete All</button>
       <p  v-if="tasks.length === 0 ">No task  have been added yet - please start adding some!</p>
       <ul v-else>
         <li v-for ="(task , index ) in tasks " >{{ task }}  </li>
